--- a/Cohort Analysis for assessing customer retention in E-commerce industry.ipynb
+++ b/Cohort Analysis for assessing customer retention in E-commerce industry.ipynb
@@ -4866,8 +4866,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "c9c9d08c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized empty Git repository in C:/Users/omoma/Project 1 internship/.git/\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "996b74b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "warning: in the working copy of 'Cohort Analysis for assessing customer retention in E-commerce industry.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add \"Cohort Analysis for assessing customer retention in E-commerce industry.ipynb\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "eb908617",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master (root-commit) fee98e4] Initial commit\n",
+      " 1 file changed, 4897 insertions(+)\n",
+      " create mode 100644 Cohort Analysis for assessing customer retention in E-commerce industry.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Initial commit\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a08ff79b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git remote add origin https://github.com/felixomomah/Project1.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "266df7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: src refspec main does not match any\n",
+      "error: failed to push some refs to 'https://github.com/felixomomah/Project1.git'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push -u origin main \"my first pu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e827b2ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The syntax of the command is incorrect.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git remote add origin <https://github.com/felixomomah/Project1.git"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bd135075",
+   "id": "98781948",
    "metadata": {},
    "outputs": [],
    "source": []
