--- a/Cohort Analysis for assessing customer retention in E-commerce industry.ipynb
+++ b/Cohort Analysis for assessing customer retention in E-commerce industry.ipynb
@@ -4867,7 +4867,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c9c9d08c",
+   "id": "e6076119",
    "metadata": {},
    "outputs": [
     {
@@ -4885,7 +4885,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "996b74b0",
+   "id": "4d8b58a4",
    "metadata": {},
    "outputs": [
     {
@@ -4903,7 +4903,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eb908617",
+   "id": "85005296",
    "metadata": {},
    "outputs": [
     {
@@ -4923,7 +4923,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a08ff79b",
+   "id": "49309af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4932,27 +4932,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "266df7e5",
+   "execution_count": 12,
+   "id": "49cff5d1",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "error: src refspec main does not match any\n",
-      "error: failed to push some refs to 'https://github.com/felixomomah/Project1.git'\n"
+      "warning: in the working copy of 'Cohort Analysis for assessing customer retention in E-commerce industry.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Clustering the Customer retention dataset-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of '.ipynb_checkpoints/Cohort Analysis for assessing customer retention in E-commerce industry-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
+      "warning: in the working copy of 'Clustering the Customer retention dataset.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
      ]
     }
    ],
    "source": [
-    "!git push -u origin main \"my first pu\""
+    "!git add .\n",
+    "#!git commit -m \"Your commit message\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "64d236ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 7fce003] Your commit message\n",
+      " 6 files changed, 1089234 insertions(+), 1 deletion(-)\n",
+      " create mode 100644 .ipynb_checkpoints/Clustering the Customer retention dataset-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/Cohort Analysis for assessing customer retention in E-commerce industry-checkpoint.ipynb\n",
+      " create mode 100644 .ipynb_checkpoints/ecommerce-checkpoint.csv\n",
+      " create mode 100644 Clustering the Customer retention dataset.ipynb\n",
+      " create mode 100644 ecommerce.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m \"Your commit message\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e91afcab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git branch -M main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dc2a37e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "branch 'main' set up to track 'origin/main'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Everything up-to-date\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push -u origin main"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e827b2ff",
+   "id": "31738d34",
    "metadata": {},
    "outputs": [
     {
@@ -4970,7 +5032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98781948",
+   "id": "ac43469f",
    "metadata": {},
    "outputs": [],
    "source": []
