--- a/Cohort Analysis for assessing customer retention in E-commerce industry.ipynb
+++ b/Cohort Analysis for assessing customer retention in E-commerce industry.ipynb
@@ -4847,34 +4847,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "97923450-dfaf-4a75-a0d8-2b0a353a1c56",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'apt-get' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!apt-get install git"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e6076119",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialized empty Git repository in C:/Users/omoma/Project 1 internship/.git/\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement git (from versions: none)\n",
+      "ERROR: No matching distribution found for git\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ce934891",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reinitialized existing Git repository in C:/Users/omoma/Project 1 internship/.git/\n"
      ]
     }
    ],
@@ -4884,8 +4891,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4d8b58a4",
+   "execution_count": 2,
+   "id": "c349f38d",
    "metadata": {},
    "outputs": [
     {
@@ -4902,17 +4909,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "85005296",
+   "execution_count": 3,
+   "id": "d54fa7da",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master (root-commit) fee98e4] Initial commit\n",
-      " 1 file changed, 4897 insertions(+)\n",
-      " create mode 100644 Cohort Analysis for assessing customer retention in E-commerce industry.ipynb\n"
+      "[main b0f63b0] Initial commit\n",
+      " 1 file changed, 73 insertions(+), 11 deletions(-)\n"
      ]
     }
    ],
@@ -4922,18 +4928,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "49309af7",
+   "execution_count": 4,
+   "id": "e46f37e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "error: remote origin already exists.\n"
+     ]
+    }
+   ],
    "source": [
-    "!git remote add origin https://github.com/felixomomah/Project1.git"
+    "!git remote add origin https://github.com/felixomomah/Cohort-Analysis-for-assessing-customer-retention.git"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "49cff5d1",
+   "id": "c138a1c7",
    "metadata": {},
    "outputs": [
     {
@@ -4955,7 +4969,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "64d236ad",
+   "id": "4cf0cd4e",
    "metadata": {},
    "outputs": [
     {
@@ -4979,7 +4993,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e91afcab",
+   "id": "9b4e3b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4989,7 +5003,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dc2a37e0",
+   "id": "2045f936",
    "metadata": {},
    "outputs": [
     {
@@ -5014,7 +5028,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "31738d34",
+   "id": "664c3a53",
    "metadata": {},
    "outputs": [
     {
@@ -5031,8 +5045,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "820501ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'apt-get' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!apt-get install git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6308e0c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git config --global user.name \"felix omomah\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7cfc1ae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git config --global user.email \"felixomomah@gmail.com\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ac43469f",
+   "id": "f6517530",
    "metadata": {},
    "outputs": [],
    "source": []
